Rename krouter to decompose router

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,5 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
+# Compose-multiplatform
+org.jetbrains.compose.experimental.uikit.enabled=true
