--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,4 @@ android.nonTransitiveRClass=true
 kotlin.mpp.enableCInteropCommonization=true
 # Compose-multiplatform
 org.jetbrains.compose.experimental.uikit.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=true
