--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,26 +16,22 @@ jobs:
     strategy:
       matrix:
         config: [
-          { target: android, os: ubuntu-latest },
+          { target: jvm, os: ubuntu-latest },
           { target: apple, os: macos-latest },
-          { target: windows, os: windows-latest },
-          { target: linux, os: ubuntu-latest },
-          { target: js, os: ubuntu-latest },
-          { target: desktop, os: ubuntu-latest },
         ]
     runs-on: ${{ matrix.config.os }}
     name: Build ${{ matrix.config.target }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: gradle
+      - uses: actions/checkout@v3
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
 
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Build with Gradle
+        run: ./gradlew build
