--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,24 @@ permissions:
   id-token: write
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Setup gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Check api
+        run: ./gradlew apiCheck
+
   build:
     strategy:
       matrix:
@@ -26,6 +44,8 @@ jobs:
           { target: apple, os: macos-latest },
         ]
     runs-on: ${{ matrix.config.os }}
+    needs:
+      - check
     name: Build ${{ matrix.config.target }}
 
     steps:
