--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.android.buildTypeAttribute.keep=true
 # Compose-multiplatform
 org.jetbrains.compose.experimental.uikit.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
