--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,8 @@ kotlin.android.buildTypeAttribute.keep=true
 # Compose-multiplatform
 org.jetbrains.compose.experimental.uikit.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
+
+# Optin to new Android source set layout
+# https://kotlinlang.org/docs/whatsnew18.html#kotlin-multiplatform-a-new-android-source-set-layout
+kotlin.mpp.androidSourceSetLayoutVersion=2
+
