--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,10 @@
 [versions]
 agp = "8.0.1"
-androidx-activity-compose="1.7.1"
+androidx-activity ="1.7.1"
+androidx-appcompat ="1.6.1"
 compose-multiplatform = "1.4.0"
 compose-compiler = "1.4.5"
+compose-test-rule = "1.4.3"
 decompose = "2.0.0-compose-experimental-alpha-02"
 essenty = "1.1.0"
 horologist = "0.4.4"
@@ -11,8 +13,12 @@ wear-compose = "1.2.0-alpha09"
 
 [libraries]
 agp = { module = "com.android.tools.build:gradle", version.ref = "agp" }
-androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "androidx-activity" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
 compose-multiplatform = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-multiplatform" }
+compose-ui-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-test-rule" }
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose-test-rule" }
 decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-compose-multiplatform = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
 essenty-parcelable = { module = "com.arkivanov.essenty:parcelable", version.ref = "essenty" }
