--- a/decompose-router/src/androidInstrumentedTest/AndroidManifest.xml
+++ b/decompose-router/src/androidInstrumentedTest/AndroidManifest.xml
@@ -1,24 +1,15 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <!--Load images from Unsplash-->
-    <uses-permission android:name="android.permission.INTERNET" />
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:allowBackup="true"
         android:supportsRtl="true">
-
-        <profileable android:shell="true" tools:targetApi="q" />
-
         <activity
             android:name="io.github.xxfast.decompose.TestActivity"
+            android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
-
 </manifest>
