--- a/decompose-router/src/androidInstrumentedTest/AndroidManifest.xml
+++ b/decompose-router/src/androidInstrumentedTest/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:allowBackup="true"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:enableOnBackInvokedCallback="true"
+        >
         <activity
             android:name="io.github.xxfast.decompose.TestActivity"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
