--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
-agp = "8.0.2"
+agp = "8.1.1"
 androidx-activity ="1.7.2"
 androidx-appcompat ="1.6.1"
-compose-multiplatform = "1.4.1"
-compose-test-rule = "1.4.3"
-decompose = "2.1.0-compose-experimental-alpha-05"
-essenty = "1.1.0"
+compose-multiplatform = "1.5.0-beta02"
+compose-test-rule = "1.5.0"
+decompose = "2.1.0-compose-experimental-alpha-07"
+essenty = "1.2.0-alpha-06"
 horologist = "0.4.12"
-kotlin = "1.8.22"
-wear-compose = "1.3.0-alpha01"
+kotlin = "1.9.0"
+wear-compose = "1.3.0-alpha03"
 
 [libraries]
 agp = { module = "com.android.tools.build:gradle", version.ref = "agp" }
