--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 [versions]
 agp = "8.1.1"
 androidx-activity ="1.7.2"
+androidx-fragment ="1.6.1"
 compose-multiplatform = "1.5.0-beta02"
 compose-test-rule = "1.5.0"
-decompose = "2.1.0-compose-experimental-alpha-07"
-essenty = "1.2.0-alpha-06"
+decompose = "2.1.0-compose-experimental"
+essenty = "1.2.0"
 horologist = "0.4.12"
 kotlin = "1.9.0"
 wear-compose = "1.3.0-alpha03"
@@ -13,6 +14,7 @@ wear-compose = "1.3.0-alpha03"
 agp = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "androidx-activity" }
+androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version = "androidx-fragment" }
 compose-multiplatform = { module = "org.jetbrains.compose:compose-gradle-plugin", version.ref = "compose-multiplatform" }
 compose-ui-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-test-rule" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose-test-rule" }
