--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,12 +2,12 @@
 agp = "8.1.1"
 androidx-activity ="1.7.2"
 androidx-fragment ="1.6.1"
-compose-multiplatform = "1.5.0-beta02"
+compose-multiplatform = "1.5.1"
 compose-test-rule = "1.5.0"
 decompose = "2.1.0-compose-experimental"
 essenty = "1.2.0"
 horologist = "0.5.7"
-kotlin = "1.9.0"
+kotlin = "1.9.10"
 wear-compose = "1.3.0-alpha03"
 
 [libraries]
