--- a/docs/writerside.cfg
+++ b/docs/writerside.cfg
@@ -4,5 +4,5 @@
 <ihp version="2.0">
     <topics dir="topics" web-path="topics"/>
     <images dir="images" web-path="images"/>
-    <instance src="d.tree" web-path="/d/" version="1.0"/>
+    <instance src="decompose-router.tree" web-path="/d/" version="0.5.1"/>
 </ihp>
