--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,15 +1,25 @@
 name: Test
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
+# This allows a subsequently queued workflow run to interrupt previous runs
+concurrency:
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
+  cancel-in-progress: true
 
 jobs:
   test:
     name: Test android instrumentation
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
+      fail-fast: true
       matrix:
-        config: [ { sdk: 21 }, { sdk: 33 }]
+        api-level: [25, 33, 34]
 
     steps:
       - uses: actions/checkout@v3
@@ -30,8 +40,23 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Run android instrumentation tests for sanity check
+      # API 30+ emulators only have x86_64 system images.
+      - name: Get AVD info
+        uses: ./.github/actions/get-avd-info
+        id: avd-info
+        with:
+          api-level: ${{ matrix.api-level }}
+
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: Instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ matrix.config.sdk }}
-          script: ./gradlew :decompose-router:connectedDebugAndroidTest --stacktrace
+          api-level: ${{ matrix.api-level }}
+          arch: ${{ steps.avd-info.outputs.arch }}
+          target: ${{ steps.avd-info.outputs.target }}
+          script: ./gradlew connectedDebugAndroidTest
