--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ concurrency:
 
 jobs:
   test:
-    name: Test android instrumentation
+    name: Test on Android
     runs-on: ubuntu-latest
     timeout-minutes: 60
     strategy:
