--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,27 +39,38 @@ jobs:
 
   build:
     strategy:
+      fail-fast: true
       matrix:
         config: [
           { target: jvm, os: ubuntu-latest },
           { target: apple, os: macos-latest },
         ]
     runs-on: ${{ matrix.config.os }}
+    timeout-minutes: 60
     needs:
       - check
+
     name: Build ${{ matrix.config.target }}
 
     steps:
       - uses: actions/checkout@v3
-      - name: set up JDK 17
+
+      - name: Setup JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: gradle
 
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
       - name: Build with Gradle
         run: ./gradlew build
 
