--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,14 +2,14 @@
 agp = "8.1.1"
 androidx-activity ="1.7.2"
 androidx-fragment ="1.6.1"
-compose-multiplatform = "1.5.11"
+compose-multiplatform = "1.6.1"
 compose-test-rule = "1.5.1"
-decompose = "2.2.0-compose-experimental-beta02"
-essenty = "1.3.0-beta01"
+decompose = "3.0.0"
+essenty = "2.0.0"
 horologist = "0.5.7"
-kotlin = "1.9.20"
+kotlin = "1.9.23"
 kotlinx-coroutines = "1.7.3"
-kotlinx-serialization = "1.6.0"
+kotlinx-serialization = "1.6.2"
 wear-compose = "1.3.0-alpha03"
 
 [libraries]
@@ -21,11 +21,13 @@ compose-multiplatform = { module = "org.jetbrains.compose:compose-gradle-plugin"
 compose-ui-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-test-rule" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose-test-rule" }
 decompose = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
-decompose-compose-multiplatform = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
+decompose-compose-multiplatform = { module = "com.arkivanov.decompose:extensions-compose", version.ref = "decompose" }
 horologist-compose-layouts = { module = "com.google.android.horologist:horologist-compose-layout", version.ref = "horologist" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinx-coroutines" }
-kotlinx-serialization = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlinx-serialization" }
+kotlin-serialization-plugin = { module = "org.jetbrains.kotlin:kotlin-serialization", version.ref = "kotlin" }
+kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlin-serialization-json", version.ref = "kotlinx-serialization" }
 wear-compose-foundation = { module = "androidx.wear.compose:compose-foundation", version.ref = "wear-compose" }
 wear-compose-material = { module = "androidx.wear.compose:compose-material", version.ref = "wear-compose" }
 wear-compose-ui-tooling = { module = "androidx.wear.compose:compose-ui-tooling", version.ref = "wear-compose" }
