--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,11 @@ android.nonTransitiveRClass=true
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.android.buildTypeAttribute.keep=true
+
 # Compose-multiplatform
 org.jetbrains.compose.experimental.uikit.enabled=true
 org.jetbrains.compose.experimental.jscanvas.enabled=true
+org.jetbrains.compose.experimental.wasm.enabled=true
 
 # Optin to new Android source set layout
 # https://kotlinlang.org/docs/whatsnew18.html#kotlin-multiplatform-a-new-android-source-set-layout
