--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,9 +125,6 @@ jobs:
     needs:
       - build
       - test
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - uses: actions/checkout@v3
@@ -180,7 +177,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
+        uses: actions/configure-pages@v5
 
       - name: Generate api docs with dokka
         run: ./gradlew dokkaHtmlMultiModule
@@ -193,7 +190,7 @@ jobs:
           docker-version: 232.10275
 
       - name: Upload documentation
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: docs
           path: |
@@ -202,9 +199,8 @@ jobs:
           retention-days: 7
 
       - name: Unzip artifact
-        uses: montudor/action-zip@v1
-        with:
-          args: unzip -qq artifacts/webHelpDECOMPOSE-ROUTER2-all.zip -d build/docs
+        run: |
+          unzip -qq artifacts/webHelpKSTORE2-all.zip -d build/docs
 
       - name: Move dokka api-doc to docs/api
         run: |
@@ -212,10 +208,10 @@ jobs:
           sudo mv build/dokka/htmlMultiModule/* build/docs/api
 
       - name: Upload pages
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
           path: ${{ github.workspace }}/build/docs
 
       - name: Release to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v4
