--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,17 +1,17 @@
 [versions]
-agp = "8.3.2"
+agp = "8.10.0"
 androidx-activity ="1.7.2"
 androidx-fragment ="1.6.1"
-compose-multiplatform = "1.7.0"
+compose-multiplatform = "1.8.0"
 compose-test-rule = "1.5.1"
-decompose = "3.2.2"
+decompose = "3.4.0-alpha01"
 dokka = "1.8.20"
-binary-compatibility-validator = "0.13.2"
+binary-compatibility-validator = "0.17.0"
 horologist = "0.5.7"
-kotlin = "2.0.20"
-kotlinx-coroutines = "1.8.0"
-kotlinx-serialization = "1.6.3"
-wear-compose = "1.3.0-alpha03"
+kotlin = "2.1.20"
+kotlinx-coroutines = "1.10.2"
+kotlinx-serialization = "1.8.1"
+wear-compose = "1.4.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity" }
